--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__
 myfile.png
 myfile.pdf
 myfile2.pdf
-flaskr/files/*
+PathFinder/files/*
 .vscode
-flaskr/download/*
+PathFinder/download/*
+Spacefile
+.space
+instancecorn
+test.pickle
